# oceanbdx

./: .gitignore  CMakeLists.txt  MUJOCO_LOG.TXT  README.md
changelog/: 2026-06-25.md  2026-06-30.md  2026-07-06.md  2026-07-08.md  2026-07-10.md  2026-07-11.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-20.md
config/: oceanbdx.yaml
config/udev/: 99-oceanbdx.rules
docs/: architecture.md  sim2real_debug_2026-06-24.md
drivers/unitree_motor/: CMakeLists.reference  example_goM8010_6_motor.cpp
include/oceanbdx/: battery_driver.hpp  calibration.hpp  config.hpp  fsm.hpp  gamepad_driver.hpp  imu_driver.hpp  leg_driver.hpp  neck_driver.hpp  policy.hpp  types.hpp
policy/: .gitignore  policy.onnx  policy.onnx.data
policy/broken_7998_backup/: policy.onnx  policy.onnx.data
policy/broken_9999_backup/: policy.onnx  policy.onnx.data
policy/stand/: policy.onnx  policy.onnx.data
runlog/: .gitignore
scripts/: measure_offset.py  urdf2mjcf.py
sim2sim/: diag_walk_policy.py  export_ckpt_onnx.py  gamepad_input.py  mujoco_sim.py  ocean_scene.xml  real_bridge.py  requirements.txt  scan_ckpt.py  test_gamepad_mapping.py  test_terrain_scene.py  test_walk_stand_switch.py
src/: battery_driver.cpp  config.cpp  fsm.cpp  gamepad_driver.cpp  imu_driver.cpp  leg_driver.cpp  main.cpp  neck_driver.cpp  policy.cpp  teleop_bridge.cpp
tests/: calibrate_motor.cpp  record_imu_noise.cpp  test_battery.cpp  test_calibration.cpp  test_gamepad.cpp  test_imu.cpp  test_leg_motor.cpp  test_neck.cpp
